feat: improve deployment scripts with dry-run and override flags
- Add .env.production loading to all deployment scripts
- Add --override flag to setup-secrets.sh and deploy-cloud-run.sh
- Add setup-database.sh for Cloud SQL PostgreSQL with dry-run mode
- Update firebase.json region to asia-southeast1
- Update Next.js to 16.0.10 and React to 19.2.1 (security fixes)
- Add Node 22 engine requirement for 2nd Gen Cloud Functions

--- a/apps/web/firebase.json
+++ b/apps/web/firebase.json
@@ -7,14 +7,14 @@
       "**/node_modules/**"
     ],
     "frameworksBackend": {
-      "region": "us-central1"
+      "region": "asia-southeast1"
     },
     "rewrites": [
       {
         "source": "/python-api/**",
         "run": {
           "serviceId": "sync-hire-agent",
-          "region": "us-central1"
+          "region": "asia-southeast1"
         }
       }
     ],
