--- a/.gitignore
+++ b/.gitignore
@@ -26,9 +26,13 @@ yarn-error.log*
 # Local env files
 .env
 .env*.local
+.env.production
 
 # Vercel
 .vercel
+
+# Firebase
+.firebase
 
 # Turbo
 .turbo
