--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -2,6 +2,9 @@
   "name": "web",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "22"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -14,6 +17,7 @@
     "firebase:init": "firebase init hosting"
   },
   "dependencies": {
+    "@google-cloud/secret-manager": "^6.0.0",
     "@google/genai": "^1.30.0",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -54,11 +58,11 @@
     "framer-motion": "^12.23.24",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.554.0",
-    "next": "16.0.1",
+    "next": "16.0.10",
     "next-themes": "^0.4.6",
-    "react": "19.2.0",
+    "react": "19.2.1",
     "react-day-picker": "^9.11.1",
-    "react-dom": "19.2.0",
+    "react-dom": "19.2.1",
     "react-hook-form": "^7.66.1",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^3.4.1",
@@ -66,17 +70,16 @@
     "tailwind-merge": "^3.4.0",
     "tw-animate-css": "^1.4.0",
     "vaul": "^1.1.2",
-    "zod": "^4.1.12",
-    "@google-cloud/secret-manager": "^6.0.0"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
-    "firebase-tools": "^13.31.4",
     "@biomejs/biome": "2.2.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
+    "firebase-tools": "^13.31.4",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
